gateway/mygateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: htts
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        kinds:
        - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: my-cert
            namespace: uptime-kuma
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: grant-traefik-to-uptime-kuma
  namespace: uptime-kuma
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik
  to:
    - group: ""
      kind: Secret
