gateway/http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: my-traefik-gateway
      namespace: traefik
      kind: Gateway
  hostnames:
    - k3s.westeurope.cloudapp.azure.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          namespace: uptime-kuma
          port: 3001
